# stoa

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PREPLAN.md  PRFAQ.md  README.md  RUNBOOK.md  SESSION-HANDOFF.md  deny.toml  docker-compose.ceph.yml  docker-compose.observability.yml  docker-compose.postgres.yml  docker-compose.webdav.yml  justfile
crates/auth/: Cargo.toml
crates/auth/src/: client_cert_store.rs  config.rs  lib.rs  oidc.rs  store.rs  trusted_issuer_store.rs
crates/auth/tests/: client_cert_store.rs  integration.rs  trusted_issuer.rs
crates/core/: Cargo.toml
crates/core/benches/: canonical.rs  reconcile.rs  sqlite_storage.rs
crates/core/fuzz/: Cargo.toml  FINDINGS.md
crates/core/migrations/: 20260101_000001_log_storage.sql  20260102_msgid_map.sql  20260104000001_audit_log.sql
crates/core/migrations_pg/: 20260101_000001_log_storage.sql  20260102_msgid_map.sql  20260104000001_audit_log.sql
crates/core/src/: article.rs  audit.rs  canonical.rs  cid_util.rs  circuit_breaker.rs  db_pool.rs  error.rs  hlc.rs  injection_source.rs  ipfs_backend.rs  lib.rs  migrations.rs  msgid_map.rs  rate_limiter.rs  secret.rs  signing.rs  telemetry.rs  util.rs  validation.rs  wildmat.rs
crates/core/src/ipfs/: mod.rs
crates/core/tests/: crdt_properties.rs  group_log_vectors.rs  reconcile_convergence.rs  vectors.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: main.rs
crates/imap/: Cargo.toml
crates/imap/migrations/: 20260423000001_imap_state.sql
crates/imap/src/: config.rs  lib.rs  listener.rs  main.rs
crates/imap/tests/: e2e_smoke.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: admin_endpoints_test.rs  did_sig_e2e.rs  nntp_conformance.rs  postgres_migrations.rs  two_process_harness.rs  verify_e2e.rs
crates/lmdb/: Cargo.toml
crates/lmdb/src/: lib.rs
crates/mail/: Cargo.toml  config.example.toml
crates/mail/migrations/: 0002_subscriptions.sql  0003_user_flags.sql  0004_state_version.sql  0005_bearer_tokens.sql  0006_change_log.sql  0007_activitypub_followers.sql  0008_activitypub_received.sql  0009_user_mailboxes.sql  0010_mailbox_messages.sql  0011_drop_user_id_mailboxes.sql  0012_drop_user_id_messages.sql  0013_user_scope_state.sql  0014_mta_sts_cache.sql  0015_drop_mta_sts_cache.sql
crates/mail/migrations_pg/: 0001_users.sql  0002_subscriptions.sql  0003_user_flags.sql  0005_bearer_tokens.sql  0006_change_log.sql  0007_activitypub_followers.sql  0008_activitypub_received.sql  0009_user_mailboxes.sql  0010_mailbox_messages.sql  0011_drop_user_id_mailboxes.sql  0012_drop_user_id_messages.sql  0013_user_scope_state.sql  0014_mta_sts_cache.sql  0015_drop_mta_sts_cache.sql
crates/mail/src/: activitypub.rs  auth_token.rs  blob.rs  config.rs  feed.rs  landing.rs  lib.rs  main.rs  metrics.rs  migrations.rs  mta_sts_cache.rs  server.rs  tls.rs  token_store.rs  upload.rs
crates/mail/tests/: bearer_tokens.rs  feed_endpoints.rs  jmap_auth_cross_account.rs  jmap_basic_auth.rs  jmap_e2e.rs
crates/reader/: Cargo.toml  config.example.toml
crates/reader/benches/: nntp_latency.rs
crates/reader/migrations/: 20260101_000001_article_numbers.sql  20260102_overview.sql  20260103_overview_did_sig.sql
crates/reader/migrations_pg/: 20260101_000001_article_numbers.sql  20260102_overview.sql  20260103_overview_did_sig.sql
crates/reader/src/: admin.rs  auth_limiter.rs  config.rs  lib.rs  main.rs  metrics.rs  migrations.rs  telemetry.rs  tls.rs
crates/reader/tests/: cert_auth_dispatch.rs  e2e_data_flow.rs  fault_store_errors.rs  injection_provenance_e2e.rs  injection_provenance_tests.rs  nntp_search.rs  starttls_integration.rs  webdav_integration.rs
crates/smtp/: Cargo.toml
crates/smtp/src/: auth.rs  config.rs  dns_cache.rs  lib.rs  main.rs  metrics.rs  mta_sts_dns.rs  mta_sts_error.rs  mta_sts_fetcher.rs  mta_sts_mx.rs  mta_sts_policy.rs  nntp_client.rs  queue.rs  relay_client.rs  relay_error.rs  relay_health.rs  relay_queue.rs  routing.rs  server.rs  session.rs  sieve_admin.rs  store.rs  test_support.rs  tls.rs  tlsrpt.rs
crates/smtp/tests/: auth_plain.rs  dkim_e2e.rs  relay_delivery_e2e.rs  sieve_native_e2e.rs  smtps_implicit_tls.rs
crates/tls/: Cargo.toml
crates/tls/src/: lib.rs
crates/transit/: Cargo.toml  build.rs  config.example.toml
crates/transit/benches/: ihave_throughput.rs
crates/transit/migrations/: 20260103000002_peer_groups.sql  20260103000003_articles.sql  20260103_000001_peers.sql  20260420000001_remote_pin_jobs.sql  20260422000001_staging.sql  20260422000002_block_cache.sql  20260424000001_staging_claimed_at.sql  20260424000002_hlc_checkpoint.sql  20260424000003_gc_audit_log.sql  20260430000001_staging_attempt_count.sql  20260430000001_staging_retry_count.sql
crates/transit/migrations_pg/: 20260103000001_peers.sql  20260103000002_peer_groups.sql  20260103000003_articles.sql  20260420000001_remote_pin_jobs.sql  20260422000001_staging.sql  20260422000002_block_cache.sql  20260424000001_staging_claimed_at.sql  20260424000002_hlc_checkpoint.sql  20260424000003_gc_audit_log.sql  20260427000001_instance_id.sql  20260430000001_staging_retry_count.sql
crates/transit/src/: admin.rs  backup_scheduler.rs  block_cache.rs  car_writer.rs  config.rs  export.rs  group_metrics.rs  hlc_persist.rs  instance_id.rs  lib.rs  main.rs  metrics.rs  migrations.rs  rate_limit.rs  reload.rs  staging.rs  telemetry.rs
crates/transit/tests/: car_export.rs  fault_ipfs_unavailable.rs  fault_malformed_articles.rs  fault_queue_full.rs  fault_sqlite_failure.rs  flood_backpressure.rs  full_stack_propagation.rs  gossip_propagation.rs  import_10k.rs  peering_auth.rs  rados_integration.rs  reload.rs  remote_pin_jobs.rs  retention_roundtrip.rs  rfc4644_streaming.rs  transit_propagation.rs  xcid_integration.rs
crates/verify/: Cargo.toml
crates/verify/migrations/: 20260104_article_verifications.sql  20260105_seen_keys.sql
crates/verify/migrations_pg/: 20260104_article_verifications.sql  20260105_seen_keys.sql
crates/verify/src/: dkim.rs  lib.rs  store.rs  types.rs  x_sig.rs
spikes/libp2p-bench/: Cargo.toml  results.md
(+240 files in other folders)
