[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tls",
    "crates/transit",
    "crates/reader",
    "crates/mail",
    "crates/sieve",
    "crates/sieve-native",
    "crates/smtp",
    "crates/imap",
    "crates/verify",
    "crates/lmdb",
    "crates/ctl",
    "crates/integration-tests",
]
