[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tls",
    "crates/transit",
    "crates/reader",
    "crates/mail",
    "crates/sieve",
    "crates/sieve-native",
    "crates/smtp",
    "crates/imap",
    "crates/verify",
    "crates/lmdb",
    "crates/ctl",
    "crates/integration-tests",
]

[workspace.dependencies]
# Secrets retrieval — backend-agnostic URI-driven abstraction.
# Features "env" and "file" cover local/dev deployments.
# Add "aws-sm", "aws-kms", "pkcs11" etc. per consuming crate as needed.
secretx-core = { version = "0.3.0" }
secretx = { version = "0.3.0", default-features = false, features = ["env", "file"] }
