[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tls",
    "crates/transit",
    "crates/reader",
    "crates/mail",
    "crates/sieve",
    "crates/sieve-native",
    "crates/smtp",
    "crates/imap",
    "crates/verify",
    "crates/lmdb",
    "crates/ctl",
    "crates/integration-tests",
]

[workspace.dependencies]
# Secrets retrieval — backend-agnostic URI-driven abstraction.
# Features "env" and "file" cover local/dev deployments.
# Cloud backends ("aws-sm", "aws-ssm", "azure-kv", "gcp-sm") are gated behind
# per-binary features (aws/azure/gcp) and compiled in only when requested.
secretx-core = { version = "0.3.1" }
secretx = { version = "0.3.1", default-features = false, features = ["env", "file"] }
