[package]
name = "stoa-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "stoa_auth"
path = "src/lib.rs"

[features]
aws   = ["secretx/aws-sm", "secretx/aws-ssm"]
azure = ["secretx/azure-kv"]
gcp   = ["secretx/gcp-sm"]

[dependencies]
bcrypt = "0.15"
secretx = { workspace = true }
thiserror = "1"
zeroize = "1"
ed25519-dalek = { version = "2" }
hex = "0.4"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
x509-parser = "0.16"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rcgen = "0.13"
time = { version = "0.3", features = ["std"] }
