[package]
name = "usenet-ipfs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
cid = { version = "0.11", features = ["serde-codec"] }
multihash-codetable = { version = "0.2", features = ["sha2"] }
hex = "0.4"
serde_ipld_dagcbor = "0.6"
mailparse = "0.15"
base64 = "0.22"
quoted_printable = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
