[package]
name = "stoa-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
serde = { version = "1", features = ["derive"] }
cid = { version = "0.11", features = ["serde-codec"] }
multihash-codetable = { version = "0.2", features = ["sha2"] }
hex = "0.4"
serde_ipld_dagcbor = "=0.6.4"
mailparse = "0.15"
base64 = "0.22"
quoted_printable = "0.5"
chrono = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "json"], default-features = false }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }

[[bench]]
name = "canonical"
harness = false

[[bench]]
name = "sqlite_storage"
harness = false

[[bench]]
name = "reconcile"
harness = false
