[package]
name = "usenet-ipfs-ctl"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "usenet-ipfs-ctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde_json = "1"
