[package]
name = "usenet-ipfs-integration-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# This crate has no library. All content is in [[test]] targets.

[dev-dependencies]
usenet-ipfs-transit = { path = "../transit" }
usenet-ipfs-reader = { path = "../reader" }
usenet-ipfs-core = { path = "../core" }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tempfile = "3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1"
cid = "0.11"
multihash-codetable = { version = "0.2", features = ["sha2"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
toml = "0.8"
