[package]
name = "usenet-ipfs-mail"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "usenet_ipfs_mail"
path = "src/lib.rs"

[[bin]]
name = "usenet-ipfs-mail"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
cid = { version = "0.11", features = ["serde-codec"] }
data-encoding = "2"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
multihash-codetable = { version = "0.2", features = ["sha2"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
mailparse = "0.15"
usenet-ipfs-core = { path = "../core" }
usenet-ipfs-reader = { path = "../reader" }
usenet-ipfs-auth = { path = "../auth" }
serde_ipld_dagcbor = "0.6"
async-trait = "0.1"
chrono = "0.4"

[dev-dependencies]
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
