[package]
name = "usenet-ipfs-reader"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "usenet_ipfs_reader"
path = "src/lib.rs"

[[bin]]
name = "usenet-ipfs-reader"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
usenet-ipfs-auth = { path = "../auth" }
usenet-ipfs-core = { path = "../core" }
base64 = "0.22"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
cid = { version = "0.11", features = ["serde-codec"] }
serde_json = "1"
hex = "0.4"
mailparse = "0.15"
rust-ipfs = "0.15"
async-trait = "0.1"
multihash-codetable = { version = "0.2", features = ["sha2"] }
sha2 = "0.10"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
prometheus = "0.14"
lazy_static = "1.5.0"
bcrypt = "0.15"
subtle = "2"
serde_ipld_dagcbor = "=0.6.4"

[[bench]]
name = "nntp_latency"
harness = false

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
