[package]
name = "stoa-reader"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "stoa_reader"
path = "src/lib.rs"

[[bin]]
name = "stoa-reader"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
stoa-auth = { path = "../auth" }
secretx = { workspace = true }
stoa-core = { path = "../core" }
stoa-smtp = { path = "../smtp" }
stoa-tls = { path = "../tls" }
stoa-verify = { path = "../verify" }
mail-auth = "0.8"
base64 = "0.22"
sqlx = { version = "0.8", features = ["sqlite", "postgres", "any", "runtime-tokio-rustls", "macros", "migrate"] }
cid = { version = "0.11", features = ["serde-codec"] }
serde_json = "1"
hex = "0.4"
mailparse = "0.15"
memchr = "2"
async-trait = "0.1"
multihash-codetable = { version = "0.2", features = ["sha2"] }
sha2 = "0.10"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
prometheus = "0.14"
bcrypt = "0.15"
bs58 = "0.4"
ed25519-dalek = "2"
subtle = "2"
serde_ipld_dagcbor = "=0.6.4"
stoa-lmdb = { path = "../lmdb" }
rocksdb = "0.22"
git2 = { version = "0.20", default-features = false }
tantivy = "0.22"
chrono = "0.4"
object_store = { version = "0.12", features = ["aws", "azure", "gcp", "http"] }
reqwest = { version = "0.12", default-features = false }
bytes = "1.11.1"
opentelemetry = { version = "0.31", features = ["metrics", "trace", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "trace", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "trace", "logs", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"

[features]
aws   = ["secretx/aws-sm", "secretx/aws-ssm"]
azure = ["secretx/azure-kv"]
gcp   = ["secretx/gcp-sm"]

[[bench]]
name = "nntp_latency"
harness = false

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
