[package]
name = "usenet-ipfs-smtp"
version = "0.1.0"
edition = "2021"

[lib]
name = "usenet_ipfs_smtp"
path = "src/lib.rs"

[[bin]]
name = "usenet-ipfs-smtp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rustls = { version = "0.23", features = ["std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
mail-auth = "0.8"
mail-parser = "0.11"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
axum = "0.8"
usenet-ipfs-sieve = { path = "../sieve" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
