[package]
name = "usenet-ipfs-smtp"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "usenet_ipfs_smtp"
path = "src/lib.rs"

[[bin]]
name = "usenet-ipfs-smtp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rustls = { version = "0.23", features = ["std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
mail-auth = "0.8"
mail-parser = "0.11"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
axum = "0.8"
subtle = "2"
usenet-ipfs-core = { path = "../core" }
usenet-ipfs-tls = { path = "../tls" }
usenet-ipfs-sieve = { path = "../sieve" }
usenet-ipfs-auth = { path = "../auth" }
base64 = "0.22"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
prometheus = { version = "0.14", default-features = false }

[dev-dependencies]
bcrypt = "0.15"
rcgen = "0.13"
# test-util enables tokio::time::pause() and tokio::time::advance() for
# deterministic timeout testing without real sleeps.
tokio = { version = "1", features = ["test-util"] }
