[package]
name = "usenet-ipfs-transit"
version = "0.1.0"
edition = "2021"

[lib]
name = "usenet_ipfs_transit"
path = "src/lib.rs"

[[bin]]
name = "usenet-ipfs-transit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
usenet-ipfs-core = { path = "../core" }
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "identify", "macros", "kad"] }
sha2 = "0.10"
rand = "0.8"
cid = "0.11"
hex = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
async-trait = "0.1"
ed25519-dalek = "2"
multihash-codetable = { version = "0.2", features = ["sha2"] }
prometheus = "0.13"
lazy_static = "1.5.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
multihash-codetable = { version = "0.2", features = ["sha2"] }
