[package]
name = "stoa-transit"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "stoa_transit"
path = "src/lib.rs"

[[bin]]
name = "stoa-transit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
stoa-core = { path = "../core" }
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "identify", "macros", "kad"] }
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
cid = "0.11"
hex = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
async-trait = "0.1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
multihash-codetable = { version = "0.2", features = ["sha2"] }
prometheus = "0.14"
subtle = "2"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-rustls = "0.26"
stoa-tls = { path = "../tls" }
stoa-verify = { path = "../verify" }
mail-auth = "0.8"
serde_ipld_dagcbor = "=0.6.4"
stoa-lmdb = { path = "../lmdb" }

[[bench]]
name = "ihave_throughput"
harness = false

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
multihash-codetable = { version = "0.2", features = ["sha2"] }
proptest = "1"
wiremock = "0.6"
