[package]
name = "stoa-verify"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[dependencies]
stoa-core = { path = "../core" }
base64 = "0.22"
cid = { version = "0.11", features = ["serde-codec"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
mail-auth = "0.8"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
hickory-resolver = "=0.26.0-alpha.1"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
