[package]
name = "usenet-ipfs-core-fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
usenet-ipfs-core = { path = ".." }

[[bin]]
name = "validate_ingress"
path = "fuzz_targets/validate_ingress.rs"
test = false
doc = false
bench = false
